--- a/.github/workflows/todo-action.yaml
+++ b/.github/workflows/todo-action.yaml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: "30 5 * * *"  # 0 + time zone difference time
 
 jobs:
   build:
@@ -16,4 +18,4 @@ jobs:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
         TODO_GIST: ${{ secrets.TODO_GIST }}
         DONE_GIST: ${{ secrets.DONE_GIST }}
-        TIME_ZONE: "Asia/Kolkata"
+        TIME_ZONE: "Asia/Kolkata" # IST
