--- a/.github/workflows/todo-action.yaml
+++ b/.github/workflows/todo-action.yaml
@@ -5,8 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
-    - cron: "30 5 * * *"  # 0 + time zone difference time
+#   schedule:
+#     - cron: "30 5 * * *"  # 0 + time zone difference time
 
 jobs:
   build:
